# goit-ds-hw-03

./: compass-connections.json
task1/: create_mongoDB.py  main.py  pyproject.toml
task2/: README.md  main.py  main_long.py  pyproject.toml  scrap.py  test.py  test2.json
