[tool.poetry]
name = "mongodb-hw-3-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mongodb_hw_3"}]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
faker = "^33.1.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
