[tool.poetry]
name = "goit-ds-hw03-task2"
version = "0.1.0"
description = ""
authors = ["YShkolnyi <yevhenii.shkolnyj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
